update CLI with git checkout f80860d44487135336c39d919f9b53174dda82fd -- utilities/cli utilities/metadata utilities/setup utilities/testing utilities/requirements.lint.txt utilities/requirements.template.txt
Signed-off-by: Wenqi Li <wenqil@nvidia.com>

--- a/utilities/cli/tests/CMakeLists.txt
+++ b/utilities/cli/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -100,6 +100,30 @@ set_property(TEST test_holohub_build_container_build_args PROPERTY
     PASS_REGULAR_EXPRESSION "--build-arg TEST=value"
 )
 
+# default docker build args via environment variable
+add_test(
+    NAME test_holohub_default_docker_build_args_env
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build-container --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_default_docker_build_args_env PROPERTY
+    ENVIRONMENT "HOLOHUB_DEFAULT_DOCKER_BUILD_ARGS=--build-arg DEFAULT_FLAG=abc"
+)
+set_property(TEST test_holohub_default_docker_build_args_env PROPERTY
+    PASS_REGULAR_EXPRESSION "docker build"
+    PASS_REGULAR_EXPRESSION "DEFAULT_FLAG=abc"
+)
+
+add_test(
+    NAME test_holohub_build_container_cuda_version
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build-container --dryrun --cuda 13
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_build_container_cuda_version PROPERTY
+    PASS_REGULAR_EXPRESSION "docker build"
+    PASS_REGULAR_EXPRESSION "--build-arg CUDA_MAJOR=13"
+)
+
 add_test(
     NAME test_holohub_run_container_docker_opts
     COMMAND ${CMAKE_SOURCE_DIR}/holohub run-container --dryrun --docker-opts "--memory 4g --entrypoint=bash"
@@ -118,6 +142,20 @@ add_test(
 set_property(TEST test_holohub_run_container_add_volume PROPERTY
     PASS_REGULAR_EXPRESSION "docker run"
     PASS_REGULAR_EXPRESSION "-v /tmp:/tmp"
+)
+
+# default docker run args via environment variable
+add_test(
+    NAME test_holohub_default_docker_run_args_env
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run-container --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_default_docker_run_args_env PROPERTY
+    ENVIRONMENT "HOLOHUB_DEFAULT_DOCKER_RUN_ARGS=-e TEST_ENV=123"
+)
+set_property(TEST test_holohub_default_docker_run_args_env PROPERTY
+    PASS_REGULAR_EXPRESSION "docker run"
+    PASS_REGULAR_EXPRESSION "TEST_ENV=123"
 )
 
 add_test(
@@ -201,26 +239,134 @@ set_property(TEST test_cli_ambiguous_dash_prefixed_arguments PROPERTY
     PASS_REGULAR_EXPRESSION "ambiguous dash-prefixed arguments"
 )
 
-# test validate_mode conflict detection
+# test explicit mode allows CLI parameters with warnings
 add_test(
-    NAME test_holohub_validate_mode_build_with_conflicts
+    NAME test_holohub_explicit_mode_cli_override_run_args
     COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat mcp --run-args "conflicting_operator" --dryrun
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
-set_property(TEST test_holohub_validate_mode_build_with_conflicts PROPERTY
-    PASS_REGULAR_EXPRESSION "Cannot specify CLI parameters.*--run-args.*when using mode.*mcp"
-    WILL_FAIL TRUE
+set_property(TEST test_holohub_explicit_mode_cli_override_run_args PROPERTY
+    PASS_REGULAR_EXPRESSION "CLI.*--run-args.*will be appended to mode command"
 )
 
-# test validate_mode multiple conflicts detection
+# test explicit mode allows multiple CLI parameter overrides with warnings
 add_test(
-    NAME test_holohub_validate_mode_build_with_and_run_args_conflicts
+    NAME test_holohub_explicit_mode_multiple_cli_overrides
     COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat mcp --build-with "operator1" --run-args="--verbose" --dryrun
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
-set_property(TEST test_holohub_validate_mode_build_with_and_run_args_conflicts PROPERTY
-    PASS_REGULAR_EXPRESSION "Cannot specify CLI parameters.*--run-args.*when using mode.*mcp"
-    WILL_FAIL TRUE
+set_property(TEST test_holohub_explicit_mode_multiple_cli_overrides PROPERTY
+    PASS_REGULAR_EXPRESSION "Running holochat in 'mcp' mode"
+)
+
+# test implicit default mode allows CLI parameter overrides
+add_test(
+    NAME test_holohub_implicit_default_mode_run_args_allowed
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat --run-args="--debug" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_implicit_default_mode_run_args_allowed PROPERTY
+    PASS_REGULAR_EXPRESSION "Running holochat in.*mode.*--run-args=.*--debug"
+)
+
+# test implicit default mode with multiple CLI parameter overrides
+add_test(
+    NAME test_holohub_implicit_default_mode_multiple_overrides
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat --run-args="--verbose" --build-with="custom_ops" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_implicit_default_mode_multiple_overrides PROPERTY
+    PASS_REGULAR_EXPRESSION "Running holochat in.*mode.*--build-with.*custom_ops.*--run-args=.*--verbose"
+)
+
+# test explicit mode allows CLI parameter overrides with warnings
+add_test(
+    NAME test_holohub_explicit_mode_allows_overrides
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat cloud --run-args="--debug" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_explicit_mode_allows_overrides PROPERTY
+    PASS_REGULAR_EXPRESSION "Running holochat in 'cloud' mode"
+)
+
+# test build command with implicit default mode overrides
+add_test(
+    NAME test_holohub_build_implicit_default_overrides
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build holochat --build-with="debug_ops" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_build_implicit_default_overrides PROPERTY
+    PASS_REGULAR_EXPRESSION "Building holochat in.*mode.*--build-with.*debug_ops"
+)
+
+# implicit default mode: run-args append warning is printed
+add_test(
+    NAME test_holohub_implicit_default_warn_run_args_appended
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat --run-args="--debug" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_implicit_default_warn_run_args_appended PROPERTY
+    PASS_REGULAR_EXPRESSION "CLI args --run-args=.*--debug.* will be appended to mode command"
+)
+
+# implicit default mode: docker-opts override warning when mode sets docker_run_args
+add_test(
+    NAME test_holohub_implicit_default_warn_docker_opts_override
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run isaac_sim_holoscan_bridge --dryrun --docker-opts "--memory 2g"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_implicit_default_warn_docker_opts_override PROPERTY
+    PASS_REGULAR_EXPRESSION "CLI args --docker-opts='--memory 2g' overrides mode --docker-opts"
+)
+
+# body_pose_estimation: implicit default mode run (v4l2)
+add_test(
+    NAME test_holohub_bpe_run_implicit_default
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run body_pose_estimation --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_bpe_run_implicit_default PROPERTY
+    PASS_REGULAR_EXPRESSION "Running body_pose_estimation in 'v4l2' mode"
+)
+
+# body_pose_estimation: explicit mode run replayer
+add_test(
+    NAME test_holohub_bpe_run_replayer
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run body_pose_estimation replayer --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_bpe_run_replayer PROPERTY
+    PASS_REGULAR_EXPRESSION "Running body_pose_estimation in 'replayer' mode"
+)
+
+# body_pose_estimation: implicit default allows run-args append warning
+add_test(
+    NAME test_holohub_bpe_run_implicit_warn_run_args
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run body_pose_estimation --run-args="--source replayer" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_bpe_run_implicit_warn_run_args PROPERTY
+    PASS_REGULAR_EXPRESSION "CLI args --run-args=.*--source replayer.* will be appended to mode command"
+)
+
+# body_pose_estimation: implicit default build (v4l2)
+add_test(
+    NAME test_holohub_bpe_build_implicit_default
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build body_pose_estimation --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_bpe_build_implicit_default PROPERTY
+    PASS_REGULAR_EXPRESSION "Building body_pose_estimation in 'v4l2' mode"
+)
+
+# body_pose_estimation: explicit mode now allows CLI parameters with warnings
+add_test(
+    NAME test_holohub_bpe_explicit_dds_allows_build_with
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run body_pose_estimation dds --build-with="extra_ops" --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_bpe_explicit_dds_allows_build_with PROPERTY
+    PASS_REGULAR_EXPRESSION "CLI.*--build-with.*overrides mode depends"
 )
 
 # test multi language project
@@ -231,4 +377,96 @@ add_test(
 )
 set_property(TEST test_holohub_run_multi_language_project PROPERTY
     PASS_REGULAR_EXPRESSION "has multiple languages.*language"
+)
+
+add_test(
+    NAME test_holohub_test_build_name_suffix
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub test --dryrun --build-name-suffix=test-branch
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_test_build_name_suffix PROPERTY
+    PASS_REGULAR_EXPRESSION "DTAG=test-branch"
+)
+
+add_test(
+    NAME test_holohub_test_cmake_options
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub test --dryrun --cmake-options="-DMAKE=1" --cmake-options="-DMAKE2=2" --ctest-options="-DTEST=2"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_test_cmake_options PROPERTY
+    PASS_REGULAR_EXPRESSION "DCONFIGURE_OPTIONS.*DMAKE=1.*DMAKE2=2.*DTEST=2"
+)
+
+add_test(
+    NAME test_holohub_test_ctest_options
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub test --dryrun --ctest-options="-DMAKE2=2" --ctest-options="-DTEST=2"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_test_ctest_options PROPERTY
+    PASS_REGULAR_EXPRESSION "DMAKE2=2.*DTEST=2"
+)
+
+# Test that HOLOHUB_PATH_PREFIX is passed from host to container
+add_test(
+    NAME test_holohub_path_prefix_env
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run-container --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_path_prefix_env PROPERTY
+    ENVIRONMENT "HOLOHUB_PATH_PREFIX=custom_prefix_"
+)
+set_property(TEST test_holohub_path_prefix_env PROPERTY
+    PASS_REGULAR_EXPRESSION "docker run"
+    PASS_REGULAR_EXPRESSION "-e HOLOHUB_PATH_PREFIX=custom_prefix_"
+)
+
+# Test that HOLOHUB_PATH_PREFIX is passed when running an application locally
+add_test(
+    NAME test_holohub_path_prefix_app_local
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run endoscopy_tool_tracking --local --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_path_prefix_app_local PROPERTY
+    ENVIRONMENT "HOLOHUB_PATH_PREFIX=custom_prefix_"
+)
+set_property(TEST test_holohub_path_prefix_app_local PROPERTY
+    PASS_REGULAR_EXPRESSION "custom_prefix_root"
+)
+
+# test mode.env is applied during local run with --verbose
+add_test(
+    NAME test_holohub_mode_env_verbose_output
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run holochat --local --verbose --dryrun --no-local-build
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_mode_env_verbose_output PROPERTY
+    PASS_REGULAR_EXPRESSION "export PYTHONPATH="
+)
+
+# test that local builds work correctly (env parameter support)
+add_test(
+    NAME test_holohub_local_build_env_support
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build holochat --local --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_local_build_env_support PROPERTY
+    PASS_REGULAR_EXPRESSION "Building holochat in.*mode"
+)
+
+add_test(  # Test that Python projects automatically get -DHOLOHUB_BUILD_PYTHON=ON flag
+    NAME test_holohub_build_python_auto_flag
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub build volume_rendering --language python --local --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_build_python_auto_flag PROPERTY
+    PASS_REGULAR_EXPRESSION "-DHOLOHUB_BUILD_PYTHON=ON"
+)
+
+add_test(
+    NAME test_holohub_run_container_extra_scripts_xvfb
+    COMMAND ${CMAKE_SOURCE_DIR}/holohub run-container --extra-scripts xvfb --dryrun
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+set_property(TEST test_holohub_run_container_extra_scripts_xvfb PROPERTY
+    PASS_REGULAR_EXPRESSION "SCRIPT=utilities/setup/xvfb.sh"
 )
