--- a/.github/workflows/check_cli.yml
+++ b/.github/workflows/check_cli.yml
@@ -30,7 +30,7 @@ jobs:
           python -m unittest utilities.cli.tests.test_cli
           python -m unittest utilities.cli.tests.test_container
           python -m unittest utilities.cli.tests.test_util
-          ./holohub setup --script template
+          ./holohub setup --scripts template
           python -m unittest utilities.cli.tests.test_cli
 
   check-cli-ctest:
