Apply suggestions from code review
Co-authored-by: Tom Birdsong <40648863+tbirdso@users.noreply.github.com>
Signed-off-by: Bruce Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -149,7 +149,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
@@ -169,7 +169,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
@@ -209,7 +209,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
@@ -630,7 +630,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
