--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -189,7 +189,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
@@ -269,7 +269,7 @@
                 "debug",
                 "--local",
                 "--language",
-                "cpp"
+                "python"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
@@ -788,9 +788,7 @@
                 "build",
                 "${input:app_name}",
                 "--benchmark",
-                "--local",
-                "--language",
-                "cpp"
+                "--local"
             ],
             "options": {
                 "cwd": "${env:WORKSPACE_DIR}"
